--- a/ChurchManager2Web/src/app/pages/accounting/transaction-grid/transaction-grid.component.html
+++ b/ChurchManager2Web/src/app/pages/accounting/transaction-grid/transaction-grid.component.html
@@ -36,7 +36,7 @@
                 <mat-datepicker-toggle matSuffix [for]="dateToPicker"></mat-datepicker-toggle>
                 <mat-datepicker #dateToPicker></mat-datepicker>
               </mat-form-field>
-              <button mat-icon-button (click)="search($event)" ><mat-icon>search</mat-icon></button>
+              <button mat-icon-button (click)="search()" ><mat-icon>search</mat-icon></button>
           </div>
           <div class="card-tools">
             <div class="input-group input-group-sm" style="width: 150px; display: none;">
