--- a/ChurchManager2Web/src/app/layout/footer/footer.component.html
+++ b/ChurchManager2Web/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="main-footer">
+<footer class="main-footer no-print">
   <div class="float-right d-none d-sm-block"><b>Version</b> 2.0</div>
   <strong>Copyright &copy; 2019-2020 ChurchManager2.</strong>
   All rights reserved.
